include_HEADERS = \
	libpff.h

pkginclude_HEADERS = \
	libpff/codepage.h \
	libpff/definitions.h \
	libpff/error.h \
	libpff/extern.h \
	libpff/features.h \
	libpff/mapi.h \
	libpff/types.h

EXTRA_DIST = \
	libpff.h.in \
	libpff/definitions.h.in \
	libpff/features.h.in \
	libpff/types.h.in

DISTCLEANFILES = \
	libpff.h \
	libpff/definitions.h \
	libpff/features.h \
	libpff/types.h \
	Makefile \
	Makefile.in

