MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmapi/libfmapi.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libpff/libpff.vcproj \
	libuna/libuna.vcproj \
	pff_test_error/pff_test_error.vcproj \
	pff_test_get_version/pff_test_get_version.vcproj \
	pff_test_open_close/pff_test_open_close.vcproj \
	pff_test_read_items/pff_test_read_items.vcproj \
	pff_test_set_ascii_codepage/pff_test_set_ascii_codepage.vcproj \
	pffexport/pffexport.vcproj \
	pffinfo/pffinfo.vcproj \
	pypff/pypff.vcproj \
	zlib/zlib.vcproj \
	libpff.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

