MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmapi/libfmapi.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libpff/libpff.vcproj \
	libuna/libuna.vcproj \
	pff_test_allocation_table/pff_test_allocation_table.vcproj \
	pff_test_attached_file_io_handle/pff_test_attached_file_io_handle.vcproj \
	pff_test_attachment/pff_test_attachment.vcproj \
	pff_test_bit_stream/pff_test_bit_stream.vcproj \
	pff_test_block_descriptor/pff_test_block_descriptor.vcproj \
	pff_test_block_tree/pff_test_block_tree.vcproj \
	pff_test_block_tree_node/pff_test_block_tree_node.vcproj \
	pff_test_checksum/pff_test_checksum.vcproj \
	pff_test_column_definition/pff_test_column_definition.vcproj \
	pff_test_compression/pff_test_compression.vcproj \
	pff_test_data_array/pff_test_data_array.vcproj \
	pff_test_data_array_entry/pff_test_data_array_entry.vcproj \
	pff_test_data_block/pff_test_data_block.vcproj \
	pff_test_deflate/pff_test_deflate.vcproj \
	pff_test_descriptors_index/pff_test_descriptors_index.vcproj \
	pff_test_encryption/pff_test_encryption.vcproj \
	pff_test_error/pff_test_error.vcproj \
	pff_test_file/pff_test_file.vcproj \
	pff_test_file_header/pff_test_file_header.vcproj \
	pff_test_folder/pff_test_folder.vcproj \
	pff_test_free_map/pff_test_free_map.vcproj \
	pff_test_huffman_tree/pff_test_huffman_tree.vcproj \
	pff_test_index/pff_test_index.vcproj \
	pff_test_index_node/pff_test_index_node.vcproj \
	pff_test_index_value/pff_test_index_value.vcproj \
	pff_test_io_handle/pff_test_io_handle.vcproj \
	pff_test_item/pff_test_item.vcproj \
	pff_test_item_descriptor/pff_test_item_descriptor.vcproj \
	pff_test_item_tree/pff_test_item_tree.vcproj \
	pff_test_item_values/pff_test_item_values.vcproj \
	pff_test_local_descriptor_value/pff_test_local_descriptor_value.vcproj \
	pff_test_local_descriptors/pff_test_local_descriptors.vcproj \
	pff_test_local_descriptors_node/pff_test_local_descriptors_node.vcproj \
	pff_test_local_descriptors_tree/pff_test_local_descriptors_tree.vcproj \
	pff_test_mapi_value/pff_test_mapi_value.vcproj \
	pff_test_message/pff_test_message.vcproj \
	pff_test_multi_value/pff_test_multi_value.vcproj \
	pff_test_name_to_id_map_entry/pff_test_name_to_id_map_entry.vcproj \
	pff_test_notify/pff_test_notify.vcproj \
	pff_test_offsets_index/pff_test_offsets_index.vcproj \
	pff_test_read_items/pff_test_read_items.vcproj \
	pff_test_record_entry/pff_test_record_entry.vcproj \
	pff_test_record_set/pff_test_record_set.vcproj \
	pff_test_reference_descriptor/pff_test_reference_descriptor.vcproj \
	pff_test_support/pff_test_support.vcproj \
	pff_test_table/pff_test_table.vcproj \
	pff_test_table_block_index/pff_test_table_block_index.vcproj \
	pff_test_table_header/pff_test_table_header.vcproj \
	pff_test_table_index_value/pff_test_table_index_value.vcproj \
	pff_test_tools_info_handle/pff_test_tools_info_handle.vcproj \
	pff_test_tools_output/pff_test_tools_output.vcproj \
	pff_test_tools_signal/pff_test_tools_signal.vcproj \
	pff_test_value_type/pff_test_value_type.vcproj \
	pffexport/pffexport.vcproj \
	pffinfo/pffinfo.vcproj \
	pypff/pypff.vcproj \
	zlib/zlib.vcproj \
	libpff.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

