[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypff-stubs"
# The major version should match the version in `configure.ac`'s `AC_INIT`
# with the minor version incremented as needed for new changes.
version = "20240608.2"
requires-python = ">=3.9"
